# poetry-django-backend-marvel

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
marvel/: models.py  serializers.py  urls.py  views.py
marvel/migrations/: 0001_initial.py
marvel_app/: asgi.py  settings.py  urls.py  wsgi.py
